base.css `html.safari body`: remove overflow-hidden and position-fixed

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -98,8 +98,8 @@ body {
 }
 html.safari body {
   width: 100%;
-  position: fixed;
-  overflow: hidden;
+  /* position: fixed;
+  overflow: hidden; */
   -webkit-touch-callout: none;
   touch-action: manipulation;
   -webkit-overflow-scrolling: touch;
